tests/snapshots/run_wpt_conformance__coreml_where_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where int32 4D tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { tensor<bool, [...]> }; got tensor<uint8, [1, 1, 2, 2]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    whereCondition: u8[1, 1, 2, 2];
    whereFalseValue: i32[1, 1, 2, 2];
    whereTrueValue: i32[1, 1, 2, 2];
  }

  nodes {
    [whereOutput] = where(whereCondition, whereTrueValue, whereFalseValue, label="");
  }

  outputs { whereOutput; }
}
